# CodeSamples

./: CMakeLists.txt  README.md
00_MyGPU/: CMakeLists.txt
00_MyGPU/src/: main.cu
01_HelloGPU/: CMakeLists.txt
01_HelloGPU/src/: main.cu
02_HostDeviceFunctions/: CMakeLists.txt
02_HostDeviceFunctions/src/: main.cu
03_GridConfiguration/: CMakeLists.txt
03_GridConfiguration/src/: main.cu
04_LegacyScheduling/: CMakeLists.txt
04_LegacyScheduling/src/: main.cu
05_IndependentThreadScheduling/: CMakeLists.txt
05_IndependentThreadScheduling/src/: main.cu
05_MemoryBasics/: CMakeLists.txt
05_MemoryBasics/src/: main.cu
06_MemoryBasics/: CMakeLists.txt
06_MemoryBasics/src/: main.cu
07_Reductions/: CMakeLists.txt
07_Reductions/src/: main.cu
07_Synchronization/: CMakeLists.txt
07_Synchronization/src/: main.cu
08_Reductions/: CMakeLists.txt
08_Reductions/src/: main.cu
08_Streams/: CMakeLists.txt
08_Streams/src/: main.cu
09_Events/: CMakeLists.txt
09_Events/src/: main.cu
09_PinnedMemory/: CMakeLists.txt
09_PinnedMemory/src/: main.cu
09_Streams/: CMakeLists.txt
09_Streams/src/: main.cu
10_ErrorHandling/: CMakeLists.txt
10_ErrorHandling/src/: main.cu
10_Events/: CMakeLists.txt
10_Events/src/: main.cu
10_Streams/: CMakeLists.txt
10_Streams/src/: main.cu
11_ManagedMemory/: CMakeLists.txt
11_ManagedMemory/src/: main.cu
11_PinnedMemory/: CMakeLists.txt
11_PinnedMemory/src/: main.cu
12_ErrorHandling/: CMakeLists.txt
12_ErrorHandling/src/: main.cu
13_ManagedMemory/: CMakeLists.txt
13_ManagedMemory/src/: main.cu
13_MemoryFences/: CMakeLists.txt
13_MemoryFences/src/: main.cu
14_BasicLocks/: CMakeLists.txt
14_BasicLocks/src/: main.cu
14_ManagedMemory/: CMakeLists.txt
14_ManagedMemory/src/: main.cu
15_GraphAPI/: CMakeLists.txt
15_GraphAPI/src/: main.cu
16_CooperativeGroups/: CMakeLists.txt
16_CooperativeGroups/src/: main.cu
16_TensorCores/: CMakeLists.txt
16_TensorCores/src/: main.cu
17_CooperativeGroups/: CMakeLists.txt
17_CooperativeGroups/src/: main.cu
18_StandardLibrary/: CMakeLists.txt
18_StandardLibrary/src/: main.cu
shared/include/: generate_random.h  test_scheduling.cuh  utility.h
