cmake_minimum_required(VERSION 3.20)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_EXTENSIONS OFF)
set(CMAKE_CUDA_STANDARD 17)

project(TutorialSamples LANGUAGES CUDA CXX)

add_subdirectory(00_MyGPU)
add_subdirectory(01_HelloGPU)
add_subdirectory(02_HostDeviceFunctions)
add_subdirectory(03_GridConfiguration)
add_subdirectory(04_LegacyScheduling)
add_subdirectory(05_IndependentThreadScheduling)
add_subdirectory(06_MemoryBasics)
add_subdirectory(07_Synchronization)
add_subdirectory(08_Reductions)
add_subdirectory(09_Streams)
add_subdirectory(10_Events)
add_subdirectory(11_PinnedMemory)
add_subdirectory(12_ErrorHandling)
add_subdirectory(13_MemoryFences)
add_subdirectory(14_ManagedMemory)
add_subdirectory(15_GraphAPI)
add_subdirectory(16_TensorCores)
add_subdirectory(17_CooperativeGroups)
add_subdirectory(18_StandardLibrary)

